crates/fuzzy-sourcemap/tests/snapshots/paragraph__find_paragraph_markdown_054.snap
---
source: crates/fuzzy-sourcemap/tests/paragraph.rs
expression: "test_case(\"markdown.md\", 54).unwrap()"
---
    a simple
      indented code block

