crates/fuzzy-sourcemap/tests/snapshots/paragraph__find_paragraph_markdown_140.snap
---
source: crates/fuzzy-sourcemap/tests/paragraph.rs
expression: "test_case(\"markdown.md\", 140).unwrap()"
---
```rust
fn main() {
    println!("Hello, world!");
}
```

