crates/fuzzy-sourcemap/tests/snapshots/paragraph__find_paragraph_markdown_182.snap
---
source: crates/fuzzy-sourcemap/tests/paragraph.rs
expression: "test_case(\"markdown.md\", 182).unwrap()"
---
```rust
enum Coin {
    Penny,
    Nickel,
    Dime,
    Quarter,
}

