crates/fuzzy-sourcemap/tests/snapshots/paragraph__find_paragraph_markdown_341.snap
---
source: crates/fuzzy-sourcemap/tests/paragraph.rs
expression: "test_case(\"markdown.md\", 341).unwrap()"
---
    ```
    bar
    ```

