crates/fuzzy-sourcemap/tests/snapshots/paragraph__find_paragraph_markdown_374.snap
---
source: crates/fuzzy-sourcemap/tests/paragraph.rs
expression: "test_case(\"markdown.md\", 374).unwrap()"
---
-
  foo
-
  ```
  bar
  ```
-
      baz

